deploy: 9bfcad809b1308bc711ae74f9588a0553008ea50

--- a/print.html
+++ b/print.html
@@ -2545,16 +2545,16 @@ impl Builder {
 <li>The existing representative should coordinate the transition with the incoming representative but it is the team's choice which one is an actual representative during the up to 3 month window. There is only ever one representative from the top-level team.</li>
 </ul>
 <h2 id="候選資格"><a class="header" href="#候選資格">候選資格</a></h2>
-<p>The following are criteria for deciding ideal candidates. These are similar to but not the same as the criteria for an effective team lead or co-lead. While a team lead <em>might</em> also make a good Council representative, serving as a team lead and serving as a Council representative both require a substantial time investment, which likely motivates dividing those roles among different people. The criteria are not hard requirements but can be used for determining who is best positioned to be a team's representative. In short, the representative should have:</p>
+<p>以下是決定理想候選人的標準，這些標準雖類似團隊領導者或共同領導者的標準，但並不完全相同。儘管團隊領導者<strong>可能</strong>也能成為傑出的理事會代表，但擔任團隊領導者和委員會代表都需要大量時間投入，這會促使將這些角色分配給不同的人。這些標準並非硬性要求，但可用於決定誰最適合成為團隊代表。簡而言之，代表應具備以下條件：</p>
 <ul>
-<li>sufficient time and energy to dedicate to the needs of the Council.</li>
-<li>an interest in helping with the topics of Project operations and Project governance.</li>
-<li>broad awareness of the needs of the Project outside of their teams or areas of active contribution.</li>
-<li>a keen sense of the needs of their team.</li>
-<li>the temperament and ability to represent and center the needs of others above any personal agenda.</li>
-<li>ability and willingness to represent all viewpoints from their team, not just a subset, and not just those they agree with.</li>
+<li>有充沛的時間與精力，以滿足委員會的需求。</li>
+<li>有興趣協助處理專案營運和治理相關事務。</li>
+<li>廣泛了解專案的需求，且不限於其所在團隊或積極貢獻之領域。</li>
+<li>對自己的團隊需求有敏銳的感知。</li>
+<li>具備代表他人的氣質和能力，超越任何私人事務。</li>
+<li>能夠代表其團隊的所有觀點，不僅僅是部分觀點，也不僅僅是團隊成員同意的觀點。</li>
 </ul>
-<p>While some teams may not currently have an abundance of candidates who fit this criteria, the Council should actively foster such skills within the larger Project, as these are helpful not only for Council membership but across the entire Project.</p>
+<p>儘管有些團隊目前可能沒有足夠的候選人符合這些標準，委員會應積極培養這些技能之人才，因為這些技能不僅對委員會成員資格有幫助，也對這個專案有益。</p>
 <h2 id="與-core-團隊之關係"><a class="header" href="#與-core-團隊之關係">與 Core 團隊之關係</a></h2>
 <p>The Leadership Council serves as the successor to the core team in all capacities. This RFC was developed with the participation and experience of the core team members, and the Council should continue seeking such input and institutional memory when possible, especially while ramping up.</p>
 <p>External entities or processes may have references to &quot;the Rust core team&quot; in various capacities. The Council doesn't use the term &quot;core team&quot;, but the Council will serve in that capacity for the purposes of any such external references.</p>
